# mcp-haskell

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  flake.nix  input_log.txt  justfile  mcp.cabal  opencode.json
.opencode/commands/: nextday.md
app/: Main.hs  Rpc.hs  Server.hs  Tools.hs
test/: MatrixSpec.hs  Spec.hs
